[package]
name = "loteria"
version = "0.1.0"
edition = "2021"

[dependencies]
# rand = "0.8"
# image = "0.24"
wasm-bindgen = "0.2"

# for the crate
# [target.'cfg(not(target_arch="wasm32"))'.dependencies]
# rand = "0.8"
# image = "0.24"
# 
# [target.'cfg(target_arch="wasm32")'.dependencies]
# wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
