[package]
name = "loteria_engine"
version = "0.2.6"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

[dependencies.mlua]
version = "0.9"
features = ["lua54", "vendored"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rand = "0.8"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lib]
name = "loteria_engine"
crate-type = ["cdylib", "rlib"]
